--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
   </template>
 
   <script src="js/util.js"></script>
+  <script src="js/ajax.js"></script>
   <script src="js/map.js"></script>
   <script src="js/data.js"></script>
   <script src="js/pin.js"></script>
