--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   <script src="js/util.js"></script>
   <script src="js/ajax.js"></script>
   <script src="js/debounce.js"></script>
+  <script src="js/validation.js"></script>
   <script src="js/notice.js"></script>
   <script src="js/map.js"></script>
   <script src="js/data.js"></script>
